# alligator

./: .gitignore  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements-tests.txt  setup.py  test2_reqs.txt  test3_reqs.txt
alligator/: __init__.py  constants.py  coordinators.py  daemons.py  exceptions.py  gator.py  tasks.py  utils.py  workers.py
alligator/backends/: beanstalk_backend.py  locmem_backend.py  redis_backend.py  sqlite_backend.py  sqs_backend.py
docs/: Makefile  bestpractices.rst  conf.py  contributing.rst  extending.rst  index.rst  installing.rst  make.bat  migration-to-1.0.rst  security.rst  tutorial.rst
docs/reference/: constants.rst  coordinators.rst  daemons.rst  exceptions.rst  gator.rst  tasks.rst  utils.rst  workers.rst
docs/releasenotes/: 0.10.0.rst  0.5.0.rst  0.5.1.rst  0.6.0.rst  0.7.0.rst  0.7.1.rst  0.8.0.rst  0.9.0.rst  1.0.0-alpha-1.rst  1.0.0-alpha-2.rst  1.0.0-alpha-3.rst  1.0.0-beta-1.rst  1.0.0-beta-2.rst  1.0.0.rst  release_notes_template.txt
tests/: run_all.sh  sqlite_backend.py  test_beanstalk_backend.py  test_custom_backend.py  test_daemons.py  test_gator.py  test_locmem_backend.py  test_redis_backend.py  test_sqs_backend.py  test_tasks.py  test_utils.py  test_workers.py
