[tool.poetry]
name = "alligator"
version = "1.0.0-alpha-3"
description = "Simple offline task queues."
authors = ["Daniel Lindsley <daniel@toastdriven.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
redis = "^3.5.3"
boto3 = "^1.14.55"
sphinx = "^3.2.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
